deepsea-admin/deepsea-admin-enrolment/src/main/fabric8/deployment.yml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: ${project.artifactId}
spec:
  template:
    metadata:
      labels:
        name: ${project.artifactId}
    spec:
      containers:
        - name: vertx
    replicas: 2
    minReplicas: 1 
    maxReplicas: 10 
    cpuUtilization:
      targetCPUUtilizationPercentage: 80     
  selector:
    name: ${project.artifactId}
  triggers:
    - type: "ConfigChange" 
    - type: "ImageChange" 
      imageChangeParams:
        automatic: true
        containerNames:
          - "vertx"
        from:
          kind: "ImageStreamTag"
          name: "deepsea-admin-enrolment:latest"
