deepsea-admin/deepsea-admin-enrolment/src/main/fabric8/route.yml
apiVersion: apps.openshift.io/v1
kind: Route
metadata:
  name: ${project.artifactId}
spec:
  to:
    kind: Service
    name: ${project.artifactId}
    weight: 100
  port:
    targetPort: http
